--- a/CinemaCritic/src/Components/Navbar.css
+++ b/CinemaCritic/src/Components/Navbar.css
@@ -1,10 +1,12 @@
 .navbar-container{
     height: 100px;
     width: 100%;
-    box-shadow: 0 0 5px 0 gray;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    background-color: black;
+    position: fixed;
+    z-index: 150;
 }
 .navbar-center ul {
     list-style: none;
@@ -36,5 +38,96 @@
 .navbar-right{
   display: flex;
   align-items: center;
+  padding-right: 20px;
+}
+.search-bar{
+  background-color: #343434;
+  border-radius: 25px;
+  width: 350px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+.search-bar img{
+  height: 16px;
+  width: 16px;
+  margin-left: 20px;
+}
+.search-bar input{
+  background-color: #343434;
+  width: 270px;
+  height: 25px;
+  color: white;
+  margin-left: 10px;
+  border: none;
+  outline: none;
+}
+.navbar-left{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 20px;
+}
+.navbar-left img{
+  height: 45px;
+  width: 40px;
+}
+.navbar-left a{
+  text-decoration: none;
+  color: white;
+  font-weight: bolder; 
+  margin-left: 10px;
 }
 
+@media(max-width: 720px) {
+  .navbar-container{
+    height: 60px;
+  }
+  .navbar-left {
+    display: flex;
+  }
+
+  .navbar-right {
+    width: 100%;
+    justify-content: center;
+    padding-right: 0;
+  }
+
+  .search-bar {
+    width: 50px;
+    height: 50px;
+    background-color: #343434;
+    border-radius: 50%;
+    justify-content: center;
+    padding: 0;
+    transition: all 0.3s ease;
+  }
+
+  .search-bar input {
+    display: none;
+  }
+
+  .search-icon {
+    height: 20px;
+    width: 20px;
+    margin: 0;
+  }
+
+  /* When search is open */
+  .navbar-container.search-open .navbar-left {
+    display: none;
+  }
+
+  .navbar-container.search-open .search-bar {
+    width: 80%;
+    border-radius: 25px;
+    justify-content: space-between;
+    padding: 0 15px;
+  }
+
+  .navbar-container.search-open .search-bar input {
+    display: block;
+    width: 90%;
+  }
+}
